# Fitness-Club-Page

./: .gitignore
back-end/: pyproject.toml
back-end/common/: exceptions.py  permissions.py
back-end/tests/: conftest.py
back-end/workout_auth/: apps.py  serializers.py  urls.py  views.py
back-end/workout_tracker/: asgi.py  settings.py  urls.py  wsgi.py
back-end/workoutplan/: admin.py  models.py  serializers.py  urls.py
back-end/workoutplan/repositories/: workout_plan_repository.py
back-end/workoutplan/services/: workout_plan_service.py
front-end/: LICENSE  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
front-end/src/: App.tsx
front-end/src/api/: api.ts  constants.ts
front-end/src/components/: ActiveSection.tsx  Footer.tsx  Hero.tsx  Logout.tsx  Navbar.tsx  ProtectedRoute.tsx  RegistrationForm.tsx  Services.tsx  SuscribeSection.tsx  Testimonials.tsx  Trainers.tsx  theme-toggle.tsx
front-end/src/context/: theme-context.tsx
front-end/src/pages/: Index.tsx  KnowMore.tsx  (+2 more)
workout_tracker/: pyproject.toml
workout_tracker/common/: exceptions.py
workout_tracker/tests/common/: test_exceptions.py
workout_tracker/tests/workoutplan/repositories/: test_workout_plan_repository.py
workout_tracker/workout_auth/: serializers.py  urls.py
workout_tracker/workout_tracker/: settings.py  urls.py
workout_tracker/workoutplan/controllers/: workout_plan_controller.py
workout_tracker/workoutplan/repositories/: workout_plan_repository.py
workout_tracker/workoutplan/services/: workout_plan_service.py
(+5 files in other folders)
